crates/nyx-lexer/tests/snapshots/integration_tests__paths__builtin_namespaces.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Using
- Std
- Colon
- Colon
- Ident: io
- Newline
- Using
- Core
- Colon
- Colon
- Ident: mem
- Newline
- Using
- Alloc
- Colon
- Colon
- Ident: global
- Newline
- Func
- Ident: builtin_ns
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: x
- Eq
- Std
- Colon
- Colon
- Ident: VERSION
- Newline
- Let
- Ident: y
- Eq
- Core
- Colon
- Colon
- Ident: ARCH
- Newline
- Let
- Ident: ptr
- Eq
- Alloc
- Colon
- Colon
- Ident: allocate
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "64"
    suffix: ~
- RParen
- Newline
- Pass
- Newline
- Dedent
