crates/nyx-lexer/tests/snapshots/integration_tests__paths__type_prefixed.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Type
- Ident: BoxedInt
- Eq
- Colon
- Colon
- Ident: Box
- LBracket
- I32
- RBracket
- Colon
- Colon
- Ident: Inner
- Newline
- Func
- Ident: type_prefix_path
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: x
- Colon
- Colon
- Colon
- Ident: Vec
- LBracket
- U8
- RBracket
- Colon
- Colon
- Ident: Iter
- Eq
- Ident: stuff
- Newline
- Pass
- Newline
- Dedent
